--- a/src/home/aitravelplanner.pug
+++ b/src/home/aitravelplanner.pug
@@ -15,7 +15,7 @@ html
       }
   body
     nav.navbar(class='bg-[#76bd95] py-4 absolute top-0 left-0 flex justify-between px-12 w-full')
-      a(href="/", class='text-xl text-white cursor-pointer font-bold p-2') TourAdvisor
+      a(href="/", class='text-xl text-white cursor-pointer font-bold p-2') TripAdvisor
       a(href='/logout')
         button(class='border border-black text-white text-sm px-4 py-2 rounded-lg hover:text-brand hover:bg-darkest grid place-items-center')
           | Logout
