--- a/src/home/dashboard.pug
+++ b/src/home/dashboard.pug
@@ -12,7 +12,7 @@ html
 body(style='background-image: url("/Images/greenhill.jpg"); background-size: cover; background-repeat: no-repeat; height: 100vh;')
     // Navbar
     nav.navbar(class='bg-[#76bd95] py-4 flex justify-between px-12')
-        a(href="/", class='text-xl text-white cursor-pointer font-bold p-2') TourAdvisor
+        a(href="/", class='text-xl text-white cursor-pointer font-bold p-2') TripAdvisor
         a(href='/logout')
               button(class='border border-black text-white text-sm px-4 py-2 rounded-lg hover:text-brand hover:bg-darkest grid place-items-center')
                 | Logout
