--- a/src/home/index.pug
+++ b/src/home/index.pug
@@ -6,7 +6,7 @@ head
   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
   link(href='https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap' rel='stylesheet')
   link(rel='stylesheet' type='text/css' href='/styles/style.css')
-  title TourAdvisor
+  title TripAdvisor
 
 body(class="font-rubik px-16 bg-lightest no-scrollbar")
   // Background cover image
@@ -24,7 +24,7 @@ body(class="font-rubik px-16 bg-lightest no-scrollbar")
 
   // Navigation bar
   nav(class="flex items-center justify-between p-3 sticky top-0 z-10")
-    a(href="/", class='text-2xl text-brand cursor-pointer font-[800]') TourAdvisor
+    a(href="/", class='text-2xl text-brand cursor-pointer font-[800]') TripAdvisor
     div
       ul(class="flex gap-3")
         li
@@ -111,7 +111,7 @@ body(class="font-rubik px-16 bg-lightest no-scrollbar")
 
   // Cards section-3
   section
-    h1(class="mt-20 text-2xl") Top experiences on TourAdvisor
+    h1(class="mt-20 text-2xl") Top experiences on TripAdvisor
     h3(class="text-lg text-mid") The best tours, activities and tickets
     div(class="flex gap-8 mt-8")
       div(class='w-1/3')
@@ -135,7 +135,7 @@ body(class="font-rubik px-16 bg-lightest no-scrollbar")
 
     // Links
     div.col-span-1
-      h2(class="text-darkest text-lg") About TourAdvisor
+      h2(class="text-darkest text-lg") About TripAdvisor
       a(href='#' class='hover:text-darkest hover:underline block text-sm my-4 text-dark') About Us
       a(href='#' class='hover:text-darkest hover:underline block text-sm my-4 text-dark') Resources &amp; Policies
       a(href='#' class='hover:text-darkest hover:underline block text-sm my-4 text-dark') Careers
@@ -150,8 +150,8 @@ body(class="font-rubik px-16 bg-lightest no-scrollbar")
 
     // Branding & privacy
     div.col-span-3
-      h1(class='font-[800] text-2xl text-brand inline-block') TourAdvisor
-      span(class='text-[0.6rem] mx-4') &copy;2023 TourAdvisor LLC All rights reserved.
+      h1(class='font-[800] text-2xl text-brand inline-block') TripAdvisor
+      span(class='text-[0.6rem] mx-4') &copy;2023 TripAdvisor LLC All rights reserved.
       div(class="my-8 flex gap-5")
         a(href='#' class="underline text-dark text-base") Terms of use
         a(href='#' class="underline text-dark text-base") Privacy and Cookies Statement
