--- a/src/home/location.pug
+++ b/src/home/location.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/styles/style.css")
-    title TourAdvisor 
+    title TripAdvisor 
 
   body(class="no-scrollbar")
     //- Navigation Bar
@@ -70,7 +70,7 @@ html(lang="en")
 //-     meta(charset="UTF-8")
 //-     meta(name="viewport" content="width=device-width, initial-scale=1.0")
 //-     link(rel="stylesheet" href="/styles/style.css")
-//-     title TourAdvisor 
+//-     title TripAdvisor 
 //-   body(class="no-scrollbar") 
 //-     //- Navigation Bar
 //-     include ../components/navbar.pug
@@ -134,7 +134,7 @@ html(lang="en")
 //-     meta(charset="UTF-8")
 //-     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 //-     link(rel="stylesheet" href="/styles/style.css")
-//-     title TourAdvisor 
+//-     title TripAdvisor 
 //-   body(class="no-scrollbar") 
 //-     //- Navigation Bar
 //-     include ../components/navbar.pug
