--- a/src/home/planmanually.pug
+++ b/src/home/planmanually.pug
@@ -22,7 +22,7 @@ html(lang="en")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
     //- link custom CSS
     link(rel="stylesheet" href="/styles/planmanually.css")
-    title TourAdvisor
+    title TripAdvisor
   body
     //- nav section
     nav.pure-menu.pure-menu-horizontal
@@ -202,7 +202,7 @@ html(lang="en")
     //- page footer
     footer
       hr.footer-border
-      span TourAdvisor
+      span TripAdvisor
       span &copy;
       span 2024
 
