--- a/src/tours/index.pug
+++ b/src/tours/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/styles/style.css")
-    title TourAdvisor | Tours 
+    title TripAdvisor | Tours 
   body 
     // Navigation bar
     include ../components/navbar.pug
