--- a/src/components/navbar.pug
+++ b/src/components/navbar.pug
@@ -3,7 +3,7 @@ mixin navbar(options)
   nav#navbar(class="bg-light text-lightest p-2 sticky top-0 left-0 z-20")
     div(class="container mx-auto flex items-center justify-between")
       div(class="flex items-center")
-        span(class='text-2xl text-brand cursor-pointer font-[800]') TourAdvisor
+        span(class='text-2xl text-brand cursor-pointer font-[800]') TripAdvisor
         // Search Bar
         form(action=options.path, method="GET", class="flex items-center mx-auto rounded-lg")
           input(type='text' placeholder='Where To?', autocomplete="off", name=options.name, class=" ml-4 px-2 py-1 w-full rounded-l-full text-mid focus:outline-none placeholder:text-mid")
