--- a/src/bookings/index.pug
+++ b/src/bookings/index.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' href='/styles/style.css')
-  title TourAdvisor | Bookings
+  title TripAdvisor | Bookings
 
 body
   // Navigation bar
@@ -11,7 +11,7 @@ body
     div(class="container mx-auto flex items-center justify-between")
       // Brand/Logo
       div(class="flex items-center")
-        span(class='font-[800] text-xl text-brand cursor-pointer') TourAdvisor
+        span(class='font-[800] text-xl text-brand cursor-pointer') TripAdvisor
         // Search Bar
         form(action='/location' , method="GET", class="flex items-center mx-auto rounded-lg") 
           //- input(type='text' placeholder='Where To?' class="ml-4 px-2 py-1 border rounded-full outline-none text-darkest")
